--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Melstrooy</title>
+  <style>
+    body {
+      background: #121212;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    a.button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 15px 30px;
+      background: #ff4500;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background 0.3s ease;
+    }
+    a.button:hover {
+      background: #e03e00;
+    }
+  </style>
+</head>
+<body>
+  <h1>Добро пожаловать в Melstrooy!</h1>
+  <p>Перейдите в наш Telegram канал:</p>
+  <a class="button" href="https://t.me/mellsstrooy" target="_blank" rel="noopener noreferrer">Перейти в Telegram</a>
+</body>
+</html>
 
